fix: update padding and alignment styles in footer and header components

--- a/app-next/app/components/header-footer/footer.module.css
+++ b/app-next/app/components/header-footer/footer.module.css
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
-  padding: 2rem;
+  padding: 1rem 15rem;
   background: linear-gradient(to right, #002147, #66b2ff, #002147);
   color: #ffffff;
 }
