--- a/app-next/app/components/header-footer/header.module.css
+++ b/app-next/app/components/header-footer/header.module.css
@@ -1,6 +1,6 @@
 .header {
   background: linear-gradient(to right, #002147, #66b2ff, #002147);
-  padding: 1.5rem 2rem;
+  padding: 1rem 15rem;
   color: #ffffff;
   display: flex;
   justify-content: left;
